# IRS-PM-2025-09-10-AIS07FT-GRP6-FinSight

./: .env  .env_base  .gitignore  ML_RESULTS_UPLOAD.md  README.md  declaration_and_prompts.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test_api.py
IRS-dissertation/: README.md  dissertation_main.tex
IRS-dissertation/appA/: appendix_a_main.tex
IRS-dissertation/appB/: appendix_b_main.tex
IRS-dissertation/appC/: appendix_c_main.tex
IRS-dissertation/chap1/: introduction_main.tex
IRS-dissertation/chap2/: Market Research.tex  background_and_lit_overview_biblio.bib
IRS-dissertation/chap4/: System Design.tex  analyst_subsys.tex
IRS-dissertation/chap5/: Implementation.tex
IRS-dissertation/chap6/: Result and Progress.tex
IRS-dissertation/chap7/: Challenges.tex
IRS-dissertation/chap8/: conclusion_main.tex
IRS-dissertation/frontmatter/: abbreviations.tex  abstract.tex  dedication.tex
SystemCode/Backend/: declaration_and_prompts.txt  docker-compose.yml  environment.yml
SystemCode/Backend/app/: config.py  watchlist.json
SystemCode/Backend/app/adapters/db/: news_repo.py  user_repo.py
SystemCode/Backend/app/adapters/embeddings/: hash_embedder.py  projecting_embedder.py  projectors.py
SystemCode/Backend/app/api/v1/: auth_router.py  forecast_router.py
SystemCode/Backend/app/hpc/: finsight_rag_main.pbs
SystemCode/Backend/app/services/: auth_service.py
SystemCode/Backend/tests/: test_forecast_api.py  train_tf_smoke.py
SystemCode/Frontend/: declaration_and_prompts.txt
SystemCode/Frontend/IRS-dissertation/: nus.cls
SystemCode/Frontend/IRS-dissertation/chap3/: Data Collection and Preparation.tex
SystemCode/Frontend/IRS-dissertation/chap_eg/: eg.tex
SystemCode/Frontend/IRS-dissertation/frontmatter/: acknowledgements.tex
SystemCode/Frontend/src/api/: http.ts
SystemCode/Frontend/src/components/Auth/: AuthContext.tsx  RegisterPage.tsx
SystemCode/Frontend/src/components/Predict/: PredictTab.tsx
SystemCode/Frontend/src/services/: predictions.ts
Video/: Youtube_Link_Promotion.txt  Youtube_Link_Sytem_Design.txt
app/: config.py  deps.py  main.py  test_main.py  watchlist.json
app/adapters/db/: database_client.py  inmemory.py  mongo_client.py  mongo_repos.py  news_repo.py  news_repo_mongo.py  pg_profile_repo.py  price_provider_mongo.py  rag_conversation_repo.py  stock_repo_mongo.py  user_profile_repo_mongo.py  user_repo.py  user_repo_mongo.py
app/adapters/embeddings/: sentence_transformers_embed.py
app/adapters/fetchers/: marketaux_fetcher.py  rss_fetcher.py
app/adapters/llm/: openai_llm.py
app/adapters/rag/: prompt_templates.py  ranker.py  retriever.py
app/adapters/vector/: mongo_vector_index.py
app/api/v1/: auth_router.py  debug_router.py  forecast_router.py  macro_router.py  news_router.py  rag_router.py  rec_router.py  stocks_router.py  user_router.py  users_router.py
app/core/: errors.py  middleware.py
app/domain/: models.py
app/forecasters/: arima_forecaster.py  base.py  dilated_cnn_forecaster.py  lgbm_forecaster.py  lstm_forecaster.py  prophet_forecaster.py  seq2seq_forecaster.py  stacked_forecaster.py  transformer_forecaster.py
app/hpc/: finsight_tf_smoke.pbs  hpc_gpu_tutorial.bash  rag_requirements.txt  rag_server.py
app/jobs/: scheduler.py
app/model/: exception.py  models.py  rag_dto.py
app/ports/: embedding.py  llm.py  scheduler.py  storage.py  vector_index.py
app/repositories/: mongo_repos.py  pg_profile_repo.py
app/routers/: news_router.py  user_router.py
app/services/: auth_service.py  forecast_service.py  ingest_pipeline.py  macro_service.py  news_service.py  rag_service.py  rec_service.py  stock_recommender.py  stock_service.py  user_service.py
app/utils/: healthy.py  news_seed.py  security.py  similarity.py  ticker_mapping.py
scripts/: upload-ml-results.js
src/: App.tsx  main.tsx
src/api/: forecast.ts  http.ts
src/components/Analyst/: AnalystTab.tsx
src/components/Auth/: LoginPage.tsx  RegisterPage.tsx
src/components/Layout/: Header.tsx  TabNavigation.tsx
src/components/News/: NewsTab.tsx
src/components/PairsTrading/: PairSelectionTab.tsx  PairsTradingTab.tsx  TradingResultsTab.tsx
src/components/Predict/: PredictTab.tsx
src/components/Recommendations/: AdvancedRecommendations.tsx  BasicRecommendations.tsx  ComparisonModal.tsx  RecommendationsTab.tsx  StockDetailModal.tsx  StockList.tsx
src/utils/: forecastMapper.ts
supabase/functions/auth/: index.ts
supabase/migrations/: 20251016065759_create_users_table.sql  20251025080713_create_pairs_trading_tables.sql
