[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight-backend"
version = "0.1.0"
description = "Finsight Backend Service with FastAPI, MongoDB, Redis, RAG and ML modules"
authors = [
    { name = "Li Jiajun", email = "jiajunli@u.nus.edu" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Settings & validation
    "pydantic>=2.7",
    "pydantic-settings>=2.0",

    # Database (MongoDB async driver)
    "motor>=3.5.0",

    # Redis + Celery for async tasks
    "redis>=5.0",
    "celery[redis]>=5.3",

    # ML / Vector / Embeddings
    "sentence-transformers>=2.7.0",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "prophet>=1.1 ; platform_system != 'Windows'",

    # HTTP client (if calling external APIs)
    "httpx>=0.27",

    # Observability
    "structlog>=24.1",
    "prometheus-client>=0.20",

    # Optional: Postgres + pgvector
    "psycopg[binary,pool]>=3.1",
    "sqlalchemy>=2.0",
    "pgvector>=0.2.5",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "black>=24.4",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"