[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight-backend"
version = "0.1.0"
description = "FinSight BackEnd — FastAPI microservices for news, RAG, forecasting & recommendations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FinSight Team" }]

# —— 统一后的依赖（整合 environment.yml & requirements.txt）——
dependencies = [
  # Web / Core
  "fastapi>=0.111",                # from environment.yml   [oai_citation:2‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "uvicorn[standard]>=0.30",       # from environment.yml   [oai_citation:3‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "pydantic>=2.7",                 # from environment.yml   [oai_citation:4‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "pydantic-settings>=2.2,<3",     # from environment.yml   [oai_citation:5‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "python-dotenv>=1.0",            # from environment.yml   [oai_citation:6‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "loguru>=0.7",                   # from environment.yml   [oai_citation:7‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)

  # HTTP / Parsing
  "httpx>=0.27",                   # from environment.yml   [oai_citation:8‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "beautifulsoup4>=4.12",          # from environment.yml   [oai_citation:9‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "feedparser>=6.0",               # from environment.yml (+ pip)   [oai_citation:10‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "requests",                      # from environment.yml (pip)     [oai_citation:11‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)

  # Vector / NLP
  "sentence-transformers>=3.0",    # from environment.yml   [oai_citation:12‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "scikit-learn>=1.5",             # from environment.yml   [oai_citation:13‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)

  # Data / Numerics
  "numpy>=1.26",                   # from environment.yml   [oai_citation:14‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "pandas>=2.2",                   # 常用依赖（目录含 forecasters/*，建议显式声明）

  # Storage / DB
  "motor>=3.6",                    # from environment.yml   [oai_citation:15‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "pymongo>=4.7",                  # from environment.yml   [oai_citation:16‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "psycopg[binary,pool]>=3.2",     # from requirements.txt & environment.yml (pip)   [oai_citation:17‡requirements.txt](sediment://file_00000000047462438f4505820b3f505d)
  "pgvector>=0.2.5",               # from requirements.txt & environment.yml (pip)   [oai_citation:18‡requirements.txt](sediment://file_00000000047462438f4505820b3f505d)

  # Scheduling / Jobs
  "apscheduler>=3.10",             # from environment.yml (pip)    [oai_citation:19‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)

  # Forecasting (Full Mode)
  "pmdarima>=2.0",
  "prophet>=1.1",                  # 需要 cmdstan 构建，首次安装可能较慢
  "cmdstanpy>=1.2",
  "lightgbm>=4.3",
  "torch>=2.2",                    # environment.yml 用的是 conda 包名 "pytorch>=2.2"   [oai_citation:20‡environment.yml](sediment://file_00000000fa98620d8c1ab3c73c01fbe4)
  "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100